Don't let plugins show through tabs, ensure we have a plugin port before dispatching events. (bug 147902)